--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "mongoose": "^8.3.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   }
 }
